--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,14 @@
     android:layout_gravity="center_horizontal"
     tools:context=".MainActivity">
 
-    <include
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_bar"
+        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/MenuStyle">
+    </android.support.v7.widget.Toolbar>
     <RelativeLayout
         android:id="@+id/relative"
         android:layout_width="match_parent"
@@ -29,7 +34,7 @@
             android:textColorHint="@color/colorPrimary"/>
 
         <Button
-            android:id="@+id/btn_add"
+            android:id="@+id/add_task"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="310dp"
