--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     app:cardBackgroundColor="#FAFBFD"
     app:cardElevation="5dp"
     android:padding="5dp"
-    android:layout_margin="5dp"
+    android:layout_margin="2dp"
     app:cardCornerRadius="4dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/task_item"
+    <RelativeLayout
+        android:id="@+id/user_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center_horizontal">
         <TextView
-            android:id="@+id/task_name"
+            android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
-            tools:text="Task name"
+            tools:text="Username"
             android:textSize="26sp"
             android:textStyle="bold" />
-        <TextView
-            android:id="@+id/unassigned"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageButton
+            android:id="@+id/delete"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/ic_delete_name"
+            android:layout_toEndOf="@id/username"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="200dp"
             android:layout_marginEnd="20dp"
-            tools:text="Assigned to: Unassigned"
-            android:textSize="18sp"/>
-    </LinearLayout>
+            android:contentDescription="@string/todo"
+            tools:ignore="ContentDescription" />
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
