--- a/app/src/main/res/layout/activity_details_task.xml
+++ b/app/src/main/res/layout/activity_details_task.xml
@@ -73,11 +73,23 @@
     </RelativeLayout>
     <Spinner
         android:id="@+id/assign_task"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:prompt="@string/spinnerFirst">
     </Spinner>
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_bar"
+        android:text="@string/save"
+        android:textColor="#ffff"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginTop="20dp"
+        android:visibility="invisible"
+        android:layout_gravity="center_horizontal"/>
 
 
 </LinearLayout>
