--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -15,27 +15,29 @@
         android:id="@+id/user_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="center_horizontal">
         <TextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="20dp"
             tools:text="Username"
             android:textSize="26sp"
             android:textStyle="bold" />
+
         <ImageButton
             android:id="@+id/delete"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/ic_delete_name"
-            android:layout_toEndOf="@id/username"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="330dp"
             android:layout_marginTop="10dp"
-            android:layout_marginStart="200dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/ic_delete_name"
             android:contentDescription="@string/todo"
+            android:scaleType="centerCrop"
             tools:ignore="ContentDescription" />
     </RelativeLayout>
 
